# pyproject.toml
[build-system]
requires = ["setuptools>=65.0", "wheel>=0.40.0", "pip>=23.0"]
build-backend = "setuptools.build_meta"
# backend-path = ["."]

[project]
name = "testteller"
dynamic = ["version"]
description = "TestTeller: Modular AI-powered test automation platform with generator_agent for intelligent test case generation and automator_agent for automated code generation. Supports multiple LLM providers: Gemini, OpenAI, Claude, and Llama."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Aviral Nigam"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = [
    "testing",
    "rag",
    "llm",
    "generative ai",
    "test case generation",
    "qa",
    "automation",
    "testcase",
    "testteller",
    "ai testing",
    "rag agent",
    "knowledge base",
    "document ingestion",
    "code ingestion",
    "test automation",
    "code generation",
    "pytest",
    "jest",
    "junit",
    "testwriter",
    "testteller-agent"
]

[project.urls]
Homepage = "https://github.com/iAviPro/testteller-agent"
"Bug Tracker" = "https://github.com/iAviPro/testteller-agent/issues"

[project.scripts]
testteller = "testteller.main:app_runner"

[tool.setuptools.dynamic]
version = {attr = "testteller._version.__version__"}